refactor(authentication): 删除无用的grpc方法